--- a/ui/assets/styles/hc-light.css
+++ b/ui/assets/styles/hc-light.css
@@ -2471,6 +2471,8 @@ div.dashboard-widget-tophosts z-bar-gauge {
     background-color: #cc0000; }
   .msg-bad::after {
     background-position: -122px -325px; }
+  .msg-bad .msg-details {
+    padding-right: 10px; }
 
 .msg-good {
   border-color: #009900; }
@@ -5173,7 +5175,7 @@ section .section-toggle:hover, .filter-container.tabfilter-container .icon-edit:
   display: table;
   position: absolute;
   z-index: 1000;
-  padding: 13px 10px 10px;
+  padding: 17px 10px 10px;
   background-color: #ffffff;
   border: 1px solid #383838;
   border-bottom-color: #353535;
